--- a/pom.xml
+++ b/pom.xml
@@ -198,4 +198,17 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <!-- ... Some other Distribution repository definitions -->
+
+        <repository>
+            <id>repsy</id>
+            <name>My Private Maven Repositoty on Repsy</name>
+            <url>https://repo.repsy.io/mvn/diliproshitha/journal-your-trade</url>
+        </repository>
+
+        <!-- ... Some other Distribution repository definitions -->
+    </distributionManagement>
+
+
 </project>
